--- a/shared/nav.html
+++ b/shared/nav.html
@@ -1,7 +1,19 @@
 <nav class="site-header-shell" aria-label="Site navigation">
   <a class="brand" data-link="index.html">
-    <span class="brand-kicker">Integrated Science</span>
-    <span class="brand-title">Tools</span>
+    <span class="brand-mark" aria-hidden="true">
+      <svg class="brand-icon" viewBox="0 0 48 48" role="img">
+        <defs>
+          <linearGradient id="brandFlaskFill" x1="0" y1="0" x2="1" y2="1">
+            <stop offset="0%" stop-color="var(--accent)"/>
+            <stop offset="100%" stop-color="var(--accent2)"/>
+          </linearGradient>
+        </defs>
+        <path d="M18 7h12a2 2 0 0 1 0 4h-1v9.1l7.9 12.5A7 7 0 0 1 31 43H17a7 7 0 0 1-5.9-10.4L19 20.1V11h-1a2 2 0 0 1 0-4z" fill="none" stroke="currentColor" stroke-width="2.6" stroke-linejoin="round"/>
+        <path d="M16.2 29.4h15.6c1.5 0 2.4 1.7 1.5 3L30.8 36a4.7 4.7 0 0 1-3.9 2.1h-5.8a4.7 4.7 0 0 1-3.9-2.1l-2.5-3.6c-.9-1.3 0-3 1.5-3z" fill="url(#brandFlaskFill)"/>
+        <path d="M35 8.5l1.2 2.6 2.8 1.2-2.8 1.2L35 16l-1.2-2.5-2.8-1.2 2.8-1.2z" fill="var(--accent2)"/>
+      </svg>
+    </span>
+    <span class="brand-title">Integrated Science Tools</span>
   </a>
   <div class="header-controls">
     <span class="nav-badge" aria-live="polite">Now: Home</span>
