Apply simulator UX/layout overhaul and shared fit/help refinements

--- a/shared/footer.html
+++ b/shared/footer.html
@@ -1,18 +1,1 @@
-<footer class="site-footer-shell" aria-label="Site footer">
-  <p class="footer-meta">Integrated Science Tools</p>
-  <p class="footer-credit">Made by Xoni for Ms. H with ❤️</p>
-  <a
-    class="footer-github-badge"
-    href="https://github.com/XoniBlue/integrated-science-tools"
-    target="_blank"
-    rel="noopener noreferrer"
-    aria-label="Open Integrated Science Tools on GitHub"
-  >
-    <img
-      src="https://img.shields.io/badge/GitHub-Repo-06b6d4?logo=github&logoColor=ffffff"
-      alt="GitHub Repo badge"
-      loading="lazy"
-      decoding="async"
-    />
-  </a>
-</footer>
+<div aria-hidden="true"></div>
