--- a/shared/nav.html
+++ b/shared/nav.html
@@ -1,36 +1,71 @@
 <nav class="site-header-shell" aria-label="Site navigation">
-  <a class="brand" data-link="index.html">
-    <span class="brand-mark" aria-hidden="true">
-      <svg class="brand-icon" viewBox="0 0 48 48" role="img">
-        <defs>
-          <linearGradient id="brandFlaskFill" x1="0" y1="0" x2="1" y2="1">
-            <stop offset="0%" stop-color="var(--accent)"/>
-            <stop offset="100%" stop-color="var(--accent2)"/>
-          </linearGradient>
-        </defs>
-        <path d="M18 7h12a2 2 0 0 1 0 4h-1v9.1l7.9 12.5A7 7 0 0 1 31 43H17a7 7 0 0 1-5.9-10.4L19 20.1V11h-1a2 2 0 0 1 0-4z" fill="none" stroke="currentColor" stroke-width="2.6" stroke-linejoin="round"/>
-        <path d="M16.2 29.4h15.6c1.5 0 2.4 1.7 1.5 3L30.8 36a4.7 4.7 0 0 1-3.9 2.1h-5.8a4.7 4.7 0 0 1-3.9-2.1l-2.5-3.6c-.9-1.3 0-3 1.5-3z" fill="url(#brandFlaskFill)"/>
-        <path d="M35 8.5l1.2 2.6 2.8 1.2-2.8 1.2L35 16l-1.2-2.5-2.8-1.2 2.8-1.2z" fill="var(--accent2)"/>
-      </svg>
-    </span>
-    <span class="brand-title">Integrated Science Tools</span>
-  </a>
-  <div class="header-controls">
-    <span class="nav-badge" aria-live="polite">Now: Home</span>
-    <button class="theme-toggle" type="button" aria-label="Switch color theme" title="Switch color theme">◐</button>
-    <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="primary-menu" aria-label="Toggle navigation">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
-    <div id="primary-menu" class="site-nav" aria-label="Primary">
-      <a data-link="index.html" data-page-link="home">Home</a>
-      <a data-link="unit-1/index.html" data-page-link="unit-1" title="Unit 1: Chemical Bonds and Fundamental Forces" aria-label="Unit 1: Chemical Bonds and Fundamental Forces">Unit 1</a>
-      <a data-link="unit-2/index.html" data-page-link="unit-2" title="Unit 2: Molecules and Engineering Solutions" aria-label="Unit 2: Molecules and Engineering Solutions">Unit 2</a>
-      <a data-link="unit-3/index.html" data-page-link="unit-3" title="Unit 3: Energy and Orbital Motion" aria-label="Unit 3: Energy and Orbital Motion">Unit 3</a>
-      <a data-link="unit-4/index.html" data-page-link="unit-4" title="Unit 4: Fields, Forces, and the Universe’s Origin" aria-label="Unit 4: Fields, Forces, and the Universe’s Origin">Unit 4</a>
-      <a data-link="unit-5/index.html" data-page-link="unit-5" title="Unit 5: Apply the Laws of Motion" aria-label="Unit 5: Apply the Laws of Motion">Unit 5</a>
-      <a data-link="unit-6/index.html" data-page-link="unit-6" title="Unit 6: Momentum, Mechanics, and Engineering Solutions" aria-label="Unit 6: Momentum, Mechanics, and Engineering Solutions">Unit 6</a>
+  <div class="sidebar-top">
+    <a class="brand" data-link="index.html">
+      <span class="brand-mark" aria-hidden="true">
+        <svg class="brand-icon" viewBox="0 0 48 48" role="img">
+          <defs>
+            <linearGradient id="brandFlaskFill" x1="0" y1="0" x2="1" y2="1">
+              <stop offset="0%" stop-color="var(--accent)"/>
+              <stop offset="100%" stop-color="var(--accent2)"/>
+            </linearGradient>
+          </defs>
+          <path d="M18 7h12a2 2 0 0 1 0 4h-1v9.1l7.9 12.5A7 7 0 0 1 31 43H17a7 7 0 0 1-5.9-10.4L19 20.1V11h-1a2 2 0 0 1 0-4z" fill="none" stroke="currentColor" stroke-width="2.6" stroke-linejoin="round"/>
+          <path d="M16.2 29.4h15.6c1.5 0 2.4 1.7 1.5 3L30.8 36a4.7 4.7 0 0 1-3.9 2.1h-5.8a4.7 4.7 0 0 1-3.9-2.1l-2.5-3.6c-.9-1.3 0-3 1.5-3z" fill="url(#brandFlaskFill)"/>
+          <path d="M35 8.5l1.2 2.6 2.8 1.2-2.8 1.2L35 16l-1.2-2.5-2.8-1.2 2.8-1.2z" fill="var(--accent2)"/>
+        </svg>
+      </span>
+      <span class="brand-title">Integrated Science Tools</span>
+    </a>
+    <div class="header-controls">
+      <span class="nav-badge" aria-live="polite">Now: Home</span>
+      <button class="theme-toggle" type="button" aria-label="Switch color theme" title="Switch color theme">◐</button>
+      <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="primary-menu" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
+  </div>
+  <div id="primary-menu" class="site-nav" aria-label="Primary">
+    <a data-link="index.html" data-page-link="home">Home</a>
+    <a data-link="unit-1/index.html" data-page-link="unit-1" title="Unit 1: Chemical Bonds and Fundamental Forces" aria-label="Unit 1: Chemical Bonds and Fundamental Forces">Unit 1</a>
+    <a data-link="unit-2/index.html" data-page-link="unit-2" title="Unit 2: Molecules and Engineering Solutions" aria-label="Unit 2: Molecules and Engineering Solutions">Unit 2</a>
+    <a data-link="unit-3/index.html" data-page-link="unit-3" title="Unit 3: Energy and Orbital Motion" aria-label="Unit 3: Energy and Orbital Motion">Unit 3</a>
+    <a data-link="unit-4/index.html" data-page-link="unit-4" title="Unit 4: Fields, Forces, and the Universe’s Origin" aria-label="Unit 4: Fields, Forces, and the Universe’s Origin">Unit 4</a>
+    <a data-link="unit-5/index.html" data-page-link="unit-5" title="Unit 5: Apply the Laws of Motion" aria-label="Unit 5: Apply the Laws of Motion">Unit 5</a>
+    <a data-link="unit-6/index.html" data-page-link="unit-6" title="Unit 6: Momentum, Mechanics, and Engineering Solutions" aria-label="Unit 6: Momentum, Mechanics, and Engineering Solutions">Unit 6</a>
+  </div>
+  <div class="nav-footer">
+    <p class="nav-credit">Made by Xoni for Ms. H with ❤️</p>
+    <div class="nav-footer-badges">
+      <a
+        class="footer-github-badge"
+        href="https://github.com/XoniBlue/integrated-science-tools"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Open Integrated Science Tools on GitHub"
+      >
+        <img
+          src="https://img.shields.io/badge/GitHub-Repo-06b6d4?logo=github&logoColor=ffffff"
+          alt="GitHub Repo badge"
+          loading="lazy"
+          decoding="async"
+        />
+      </a>
+      <a
+        class="footer-github-badge"
+        href="https://github.com/XoniBlue/integrated-science-tools"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Built with Vanilla JavaScript"
+      >
+        <img
+          src="https://img.shields.io/badge/Vanilla-JS-f7df1e?logo=javascript&logoColor=000"
+          alt="Vanilla JS badge"
+          loading="lazy"
+          decoding="async"
+        />
+      </a>
     </div>
   </div>
 </nav>
